[gd_scene load_steps=3 format=3 uid="uid://b8mp0brctjr6p"]

[ext_resource type="Script" path="res://event_type_selectooch.gd" id="1_7t2st"]
[ext_resource type="PackedScene" uid="uid://ho8u6ajxeik8" path="res://slot_party.tscn" id="1_xv1jd"]

[node name="VBoxContainer" type="VBoxContainer"]
offset_right = 456.0
offset_bottom = 304.0
script = ExtResource("1_7t2st")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LineEditTitle" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "Title"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LineEditDesc" type="LineEdit" parent="HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "Description"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LineEditImage" type="LineEdit" parent="HBoxContainer3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "Image"

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LineEditPortrait" type="LineEdit" parent="HBoxContainer4"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "DialogPortrait"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
current_tab = 0

[node name="Slot0" parent="TabContainer" instance=ExtResource("1_xv1jd")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Slot1" parent="TabContainer" instance=ExtResource("1_xv1jd")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Slot2" parent="TabContainer" instance=ExtResource("1_xv1jd")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Slot3" parent="TabContainer" instance=ExtResource("1_xv1jd")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Slot4" parent="TabContainer" instance=ExtResource("1_xv1jd")]
visible = false
layout_mode = 2
metadata/_tab_index = 4
